app/assets/stylesheets/style.css.scss
/* ... */
.supporting-heading {
	font-size: $scale-1;
	margin: 0;
}
.supporting {
	line-height: 1.4em;
}
/* exception */
	.incident-body {
		line-height: $scale-2;
	}
/* end exeption */
.supporting,
.discrete {
	font-size: 14px;
	font-size: .875rem; /* 14px */	
}
.discrete {
	li {
		margin-bottom: 1em;
	}
}
.query-results-description {
	padding-top: 0;
	text-decoration: none;
	font-weight: normal;
	.start-date,
	.end-date {
		display: inline-block;
	}
	
}
.redacted {
    text-transform: uppercase;
	display: inline-block;
	padding: 0 8px;
	padding: 0 .5rem;
	border-bottom: none;
	letter-spacing: 0.1875rem;
	font-size: .875em;
}
.distinct-download {
	padding: .25rem .5rem;
	border-width:  1px;
	border-width:  .07rem;
	border-radius: .25rem;
	border-style: solid;
	text-decoration: none;
	margin-bottom: 1rem;
	display: inline-block;
}
.glossary {
	dt {
		font-weight: bold;
		letter-spacing: 1px;
		letter-spacing: .07rem;
		padding-top: 32px;
		padding-top: 2rem;
		&:hover:after {
  		    color: lighten($fade, 15%);
		    content: "#" attr(id);
		    display: inline-block;
		    font-size: 12px;
		    font-size: .75rem;
		    line-height: 1;
		    padding-left: .75rem;
		    text-transform: none;
		    vertical-align: middle;
		} /* Thanks to alistapart */
		abbr {
			cursor: default;
		}
	}
	dd {
		margin: 0 0 1rem;
		p {
			margin-top: 0;	
		}
	}
}
.docs-icon.distinct-download {
	padding-left: 1.75rem;
	background-position-x: .25rem;
	width: auto;
}
.editors-additional {
	h2 {
		text-align: center;
		margin-bottom: 1rem;		
	}
	h3 {
		font-weight: bold;
		font-size: 20px;
		font-size: 1.25rem;
		text-decoration: none;
		padding-top: 32px;
		padding-top: 2rem;
		margin-bottom: 16px;
		margin-bottom: 1rem;
	} /* h2 styles */
}
/* @end Typography */
/* @group Page structure */
.holding {
	text-align: center;
	padding: 0 1em;
	max-width: 27em;
	.site-footer {
		border: 0;
		ul.contact {
			list-style: none;
			padding: 0;
			li {
				margin-top: 1em;
				display: block;
			}
		}
	}
}

.site-header,
.main,
.site-footer {
	padding-left: 5%;
	padding-right: 5%;
}

.site-header {
	padding-top: $scale-4;
	padding-bottom: $scale-4;
}

.site-footer {
	border-top: 1px $contrast solid ;
	margin-top: 48px;
	margin-top: 3rem;
	padding-top: 2rem;
	padding-bottom: 32px;
	padding-bottom: 2rem;
}


.box {
	padding: 24px 5% 8px;
	padding: 1.5rem 5% .5rem;
	border-top-width: 2px;
	border-top-width: 0.125rem;
	border-top-style: solid;
	border-bottom-width: 2px;
	border-bottom-width: 0.125rem;
	border-bottom-style: solid;
	margin: 1.5rem 0;
	color: #000;
	:first-child {
		padding-top: 0;
		margin-top: 0;
	}
	&.editors-additional {
	border: none;
	} /* exception */
}

.share-list {
	list-style: none;
	margin: 0 0 0;
	padding: 0;
}
	.share-item {
		display: inline-block;
		text-align: left;
		width: 32%;
		min-width: 6rem;
		margin-top: 1em;
		.share-item + .share-item {
			margin-left: 1%;
		}
		a {
			display: block;
			text-decoration: none;
			padding: .875rem 1.2rem .875rem .5rem;
			font-size: 1rem;
			width: 100%;
		}
	}



/* @group Incidents */

.incident {
	clear: both;
	float: none;
	padding-top: 2rem;
	h1 {
		margin-top: 0;
		font-size: 1.5rem;
	}
	.help {
		display: block;
	}
	dl {
		margin-top: 1em;
		margin-bottom: 0;
	}
	dt {
		text-transform: uppercase;
		font-size: 12px;
		font-size: $scale-n2;
		font-weight: bold;
		&:after {
			content: " :";
		}
	}
	dd {
		margin: 0 0 $scale-1;
	}
	.incident-primary {
		padding-bottom: 1em;
		margin-bottom: 1em;
		border-bottom: 1px $contrast solid;
		border-bottom: .07rem $contrast solid;
		dt {
			line-height: 1;
		}
	}
	.related-signpost {
		float: right;
		clear: right;
		width: auto;
		padding: .2rem .4rem .2rem .2rem;
		border: .07rem solid $contrast;
		dt	{
			text-indent: -999em;
			display: inline-block;
			margin-bottom: 0;
		}
		dd {
			display: inline-block;
			margin-bottom: 0;		
		}
		dd + dt {
			margin-left: .25rem;
		}
		+ a {
			clear: both;
			float: none;
			display: block;
		}
	}
	.incident-location {
		.add-details {
			/* visibility: collapse; */
			font-weight: normal;
		}
		.collapsible-heading-toggle {
			text-decoration: underline;
			visibility: visible;
			display: block;
			padding-left: 0;
		}
	}

	.box {
		margin-top: 0;
		margin-bottom: 0;
	}
	.editors-additional {
		margin-top: 2rem;
		padding-top: 1rem;
		padding-bottom: 1rem;
		dt {
			font-weight: normal;
			text-transform: none;
			letter-spacing: 0.0625rem;
			color: $regular-text;
		}
		dd {
			padding-left: 1rem;
		}
		:first-child {
		padding-top: 0;
		margin-top: 0;
	}

	}
}
	.incident-primary-meta {
		font-weight: bold;
		a {
			text-decoration: underline;
			font-weight: normal;
		}
	}
	.incident-summary {
		dt, dd {
			width: auto;
		}
	}
	.incident-additional {
		overflow: hidden;
		dt {			
			float: left;
			clear: left;
			padding-right: 1rem;
		}	
	}

/* @end Incidents */

/* @group Incidents List */

.field-label {
		text-transform: uppercase;
		font-size: 12px;
		font-size: $scale-n2;
		font-weight: bold;
		float: left;
		clear: left;
		padding-right: .25rem;
		&:after {
			content: ":";
		}
}
.header-row {
	display: none;
}
.incident-list {
	list-style: none;
	padding: 0;
	margin: 0;
	p {
		margin: 0;
	}
}
.incident-item {
	clear: both;
	border-top: 1px $contrast solid;
	padding: .5rem 0 1rem;
	.incident-occured-on,
	.incident-type,
	.incident-location {
		display: block;
		font-weight: bold;
		padding-bottom: .5rem;
	}
	.incident-body {
		padding-bottom: .5rem;
	}
	.incident-location-details {
		padding-bottom: .5rem;
	}
	.incident-link {
		display: inline-block;
		float: right;
		padding: .25rem .5rem;
	}
}
.page-link {
		dt {
			color: $fade;	
			display: inline-block;
			font-size: $scale-n2;
			&:after {
				content: ":";
			}
		}
		dd {
			display: inline-block;
			margin:0 0 0 4px;
			margin:0 0 0 .25rem;
		}
		input {
			border: 1px $fade solid;
			padding: .25rem;
			color: #555;
		}
}
/* ... */

